<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_creating_profile">CreatingProfile</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>

    <string-array name="location_array">
        <item>1 Jurong West Central 2, #B1-09, Jurong Point, Jurong Point, Singapore 648886</item>
        <item>221 Boon Lay Place, #02-200, Boon Lay Shopping Complex, Boon Lay Shopping Centre, Singapore 640221</item>
        <item>399 Yung Sheng Road, #01-35, Taman Jurong Shopping Centre, N S Household Taman Jurong, Singapore 610399</item>
        <item> 345 Jurong East Street 31 #01-29, Singapore 600345 </item>
        <item> 498 Jurong West Street 41, Singapore 640498 </item>
    </string-array>

    <string-array name="history_sortby_choice">
        <item>@string/sortby_Date_earliest</item>
        <item>@string/sortby_Date_latest</item>
        <item>@string/sortby_Price</item>
        <item>@string/sortby_Quantity</item>
    </string-array>
    <string name="sortby_Date_earliest">Date(earliest)</string>
    <string name="sortby_Date_latest">Date(latest)</string>
    <string name="sortby_Price">Price</string>
    <string name="sortby_Quantity">Quantity</string>

    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_select_product_category">SelectProductCategoryActivity</string>
    <string name="title_activity_specific_list">SpecificListActivity</string>
    <string name="title_activity_history_spec_list">HistorySpecListActivity</string>
    <string name="title_activity_test">test</string>


    <string name="menu_grocery_list">Grocery List</string>
    <string name="menu_expenditure">Expenditure</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>

    <string name="create_list_dialog_1_prompt">Enter name of new list</string>
    <string name="create_list_dialog_2_prompt">List name already exists! \nPlease choose another list name</string>
    <string name="list_confirmed_prompt">List has been confirmed!</string>
    <string name="create_list_dialog_list_name_placeholder">List name</string>
    <string name="product_add_dialog_1_prompt_placeholder">Do you want to add Product to the list?</string>
    <string name="product_add_dialog_1_prompt_pt1">Do you want to add </string>
    <string name="product_add_dialog_1_prompt_pt2"> to the list?</string>
    <string name="product_add_dialog_2_prompt">Product has been added!</string>
    <string name="select_dietary_preference_dialog_prompt">Dietary preferences:</string>
    <string name="choose_location_dialog_prompt">Choose location</string>
    <string name="budget_update_dialog_prompt">Budget has been updated!</string>
    <string name="logout_dialog_prompt">Are you sure you want to log out?</string>
    <string name="ok_button">Ok</string>
    <string name="confirm_button">Confirm</string>

    <string name="healthier_choice_option">Healthier choice</string>
    <string name="halal_option">Halal</string>
    <string name="vegetarian_option">Vegetarian</string>
    <string name="gluten_free_option">Gluten-free</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_dialog1_prompt">Your selected username and password cannot be empty!</string>
    <string name="login_dialog2_prompt">Your selected password is too short!</string>
    <string name="edit_profile_cfm_dialog">Your Profile has been updated!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
