<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/dialog_select_dietary_preference">

    <TextView
        android:id="@+id/select_dietary_preference_dialog_prompt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_dietary_preference_dialog_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout">

        <CheckBox
            android:id="@+id/select_dietP_healthierChoice_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthier_choice_option" />

        <CheckBox
            android:id="@+id/select_dietP_halal_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/halal_option" />

        <CheckBox
            android:id="@+id/select_dietP_vegeterian_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian_option" />

        <CheckBox
            android:id="@+id/select_dietP_glutenFree_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gluten_free_option" />

    </LinearLayout>

    <Button
        android:id="@+id/select_dietP_ok_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/ok_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.959" />

</android.support.constraint.ConstraintLayout>